# auto-split

./: .env.example  .flake8  .gitignore  Makefile  README.md  main.py  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: ci.yml
auto_split/: app.py  auth.py  bookings.py  bookings_calendar.py  common.py  components.py  config.py  config_page.py  costs.py  debts.py  download.py  expenses.py  login.py  main.py
auto_split/db/: init_db.py  migrations.py
car_pool/: app.py  bookings.py  bookings_calendar.py  common.py  components.py  config.py  config_page.py  costs.py  debts.py  expenses.py  login.py  main.py
car_pool/db/: init_db.py  migrations.py
carpool/: app.py  bookings.py  bookings_calendar.py  costs.py  debts.py  expense_type.py  expenses.py  login.py  main.py  users.py
carpool/db/: expense_type.py  init_db.py
e2e-test/: package-lock.json  package.json  playwright.config.js
e2e-test/playwright-report/: index.html
e2e-test/tests/: auth.spec.js  bookings.spec.js  config.spec.js  debts.spec.js  expenses.spec.js  helpers.js  multi-user.spec.js
test/: test_bookings.py  test_db.py  test_debts.py  test_download.py  test_expenses.py
