[tool.poetry]
name = "car-pool"
version = "0.1.0"
description = ""
authors = ["Arvid Larsson <arvid94@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-fasthtml = "0.4.4"
requests = "2.25.1"
fa6-icons = "^0.0.2"
ics = "^0.7.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
