[tool.poetry]
name = "car-pool"
version = "0.1.0"
description = ""
authors = ["Arvid Larsson <arvid94@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-fasthtml = "0.6.0"
requests = "2.25.1"
fa6-icons = "^0.0.2"
ics = "^0.7.2"
fastapi = "^0.114.1"
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"
pytest-env = "^1.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["car_pool"]

[tool.isort]
profile = "black"

[tool.pytest_env]
USERS = "user1,user2,user3"
CURRENCY = "USD"
FUEL_EFFICIENCY = "0.1"
COST_PER_DISTANCE = "0.5"
DISTANCE_UNIT = "km"
VOLUME_UNIT = "liters"
DATABASE = ":memory:"
