[project]
name = "auto-split"
version = "0.1.0"
description = ""
authors = [
    {name = "Arvid Larsson", email = "arvid94@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-fasthtml==0.12.0",
    "requests==2.25.1",
    "fa6-icons==0.0.2",
    "ics==0.7.2",
    "pytest==8.3.3",
    "fastapi>=0.118.0",
]

[project.optional-dependencies]
dev = [
    "pytest-env==1.1.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["auto_split*"]
exclude = ["data*", "test*"]

[tool.pytest.ini_options]
pythonpath = ["auto_split"]

[tool.isort]
profile = "black"

[tool.ruff.lint]
ignore = ["F405", "F811", "F403"]

[tool.ruff.lint.per-file-ignores]
"auto_split/main.py" = ["F401"]

[tool.pytest_env]
ADMIN_USERNAME = "username"
ADMIN_PASSWORD = "password"
USERS = "user1,user2"
CURRENCY = "USD"
FUEL_EFFICIENCY = "0.1"
COST_PER_DISTANCE = "0.5"
DISTANCE_UNIT = "km"
VOLUME_UNIT = "liters"
DATABASE = ":memory:"
